# factlib

./: .pre-commit-config.yaml  Dockerfile.owlpost  README.md  docker-compose.yaml  go.mod  go.sum  justfile
cmd/e2e/: main.go
cmd/owlpost/: main.go
cmd/owlpost/delivery/health/: index.go
cmd/owlpost/delivery/metrics/: index.go
cmd/owlpost/utils/: config.go  logger.go
cmd/wal/: main.go
examples/: adapter_examples.go  main.go
pkg/client/: adapters.go  adapters_test.go  client.go  client_integration_test.go
pkg/common/: fact.go  types.go
pkg/kafka/: producer.go
pkg/logger/: default.go  logger.go
pkg/metrics/: metrics.go
pkg/outbox/: README.md
pkg/outbox/client/: client.go  client_test.go  executors.go
pkg/outbox/consumer/: consumer.go  consumer_test.go  kafka.go
pkg/outbox/producer/: executors.go  producer.go  producer_test.go
pkg/outbox/service/: kafka.go  service.go  service_test.go
pkg/postgres/: health.go  pgx.go  sql.go  types.go  wal.go  wal_integration_test.go
pkg/proto/: outbox.pb.go  outbox.proto
pkg/worker/: example_handler.go  worker.go
proto/: outbox.proto
python/: README.md  pyproject.toml
python/factlib/: __init__.py  apps.py  index.py
python/factlib/pb/: outbox_pb2.py  outbox_pb2.pyi
scripts/: console-config.yml  init-postgres.sh
